# corsair-psu-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: .gitignore  database.py  requirements.txt  server.py  transient_detector.py
dashboard/static/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  PROTOCOL.md
drivers/linux/: 99-corsair-psu.rules  README.md
drivers/windows/: README.md  corsair-psu-winusb.inf
examples/: basic_read.py  continuous_monitor.py
src/corsair_psu_monitor/: __init__.py  cli.py  driver_installer.py  protocol.py  psu.py
tests/: test_protocol.py  test_psu.py
